# IPCheck-Website

./: .gitignore  Cargo.toml  start.bat  start.sh
src/: main.rs
static/: style.css
templates/: index.html
