[package]
name = "ipcheck-website"
version = "1.0.0"
edition = "2024"
authors = ["Xeyo <wojciechfirmowe@wp.pl>"]
description = "Fast and simple website showing user IP address"
repository = "https://github.com/Xeyo-Developer/IPCheck-Website"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "fs"] }
askama = "0.14"
headers = "0.4.1"
ctrlc = "3.4.7"
local-ip-address = "0.6.5"